--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
 PORT=3000
-DBCONECT=mongodb+srv://root:V19tlRzc2Lu4MLjf@cluster0.ur4dx.mongodb.net/hospitaldb
+DBCONECT=mongodb+srv://root:QZIcBWRXYQK08pby@cluster0.ur4dx.mongodb.net/hospitaldb
 JWT_SECRET=Hoasdfasdf@dfsdf1321
+#QZIcBWRXYQK08pby   reciente
+#8KKMn7Q0Xqgsx8de   nuevo
+#V19tlRzc2Lu4MLjf aniguo
+
+
+# GOOGLE_ID=129112809675-i79de8o7ij72oa5p5bhanvtgpa9d06k0.apps.googleusercontent.com
+# GOOGLE_SECRET=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
+
+
+GOOGLE_ID=12806462688-nbsaet354jtbda43tkht98hpfp4sondc.apps.googleusercontent.com
+GOOGLE_SECRET=PYulNcIZbHbLCcgSvIbeDJZg
