--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
     "fs": "0.0.1-security",
+    "google-auth-library": "^7.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "uuid": "^8.3.2"
